style :  input field overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -20,13 +20,13 @@ input {
 
 .container {
   max-width: 900px;
-  width: 95%;
+  width: 90%;
   margin: auto;
 }
 
-.main__title{
+.main__title {
   text-align: center;
-  margin:  2rem 0px ; 
+  margin: 2rem 0px;
 }
 
 .todoForm {
@@ -49,11 +49,11 @@ input {
   height: 100%;
 }
 
-.todoForm__btn{
+.todoForm__btn {
   border: none;
   outline: none;
   background-color: #2c3e50;
-  color: #FFF;
+  color: #fff;
   padding: 0.5rem;
   border-radius: 10px;
   font-size: 1.2rem;
@@ -61,39 +61,38 @@ input {
   cursor: pointer;
 }
 
-
-.todo{
+.todo {
   /* border: 2px solid red; */
   margin-top: 1rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
-
 }
 
-.todo__title{
+.todo__title {
   /* border: 2px solid green; */
   display: flex;
   align-items: center;
   gap: 1rem;
 }
 
-.todo__title p{
-  font-size: 1.2rem
+.todo__title p {
+  font-size: 1.2rem;
+  word-break: break-all;
 }
 
-input[type="checkbox"]{
-  height: 32px;
-  width: 32px;
-  accent-color: #FFF;
+input[type="checkbox"] {
+  min-height: 32px;
+  min-width: 32px;
+  accent-color: #fff;
 }
 
-.cross__btn{
+.cross__btn {
   font-size: 1.2rem;
   cursor: pointer;
 }
 
-.completed{
+.completed {
   text-decoration: line-through;
   opacity: 0.8;
 }
